Our services overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1054,6 +1054,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 #clients {
   padding: 60px 0;
+  overflow: hidden;
 }
 
 #clients img {
